examples/test/testpolicy15599.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15599
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key47: value23
      key42: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value26
          key14: value43
      podSelector:
        matchLabels:
          key28: value1
          key20: value43
